# diffusion-for-shared-autonomy

./: .devcontainer.json  .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
diffusha/: compute_sigma_max.py
diffusha/actor/: __init__.py  assistive.py  base.py  joystick.py  keyboard.py  ur5_place_hoop_actor.py  waypoint_controller.py
diffusha/baseline/: train_bc.py
diffusha/config/: default_args.py
diffusha/config/sweep/: sweep-blockpush.py  sweep-lunarlander.py  sweep_BC.py  sweep_lunarlander-eval.py
diffusha/data_collection/: flip_replay.py  generate_data.py  train_sac.py
diffusha/data_collection/config/: default_args.py
diffusha/data_collection/config/sweep/: sweep-blockpush.py  sweep_lander-v1.py  sweep_lander-v5.py
diffusha/data_collection/env/: __init__.py  assistance_wrappers.py  eval_hook.py  lunar_lander.py  multiprocess_vector_env.py  pointmaze_wrapper.py  reward_wrapper.py  ur5_place_hoop_env.py
diffusha/data_collection/env/block_push_env_test/: d4rl_utils.py  env_list.py  eval_env.py  tasks.py
diffusha/data_collection/env/block_pushing/: block_pushing.py  block_pushing_discontinuous.py  metrics.py  (+3 more)
diffusha/data_collection/pointmaze/: convert_to_replay.py
diffusha/data_collection/utils/: agent.py
diffusha/diffusion/: ddpm.py  models.py  sha.py  train.py  utils.py
diffusha/diffusion/evaluation/: configs.json  eval.py  eval_assistance.py  fetch_configs.py  helper.py  play.py
diffusha/utils/: eval.py  patch.py  renderer.py  reproducibility.py  tticslurm.py
docker/: .devcontainer.json  Dockerfile  docker-compose.yml
(+8 files in other folders)
